--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-intl": "2.8.0",
     "react-js-pagination": "^3.0.3",
     "react-loading-skeleton": "^2.2.0",
+    "react-player": "^2.9.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
